# power-profiles-daemon-rs

./: Cargo.toml  README.md  config.json  powerr-profiles-daemon.code-workspace
src/: main.rs  settings.rs  types.rs
src/dbus/: iface.rs  legacy.rs  mod.rs  types.rs
src/drivers/: mod.rs  utils.rs
src/drivers/amd/: mod.rs  pstate.rs
src/drivers/cpu/: mod.rs  types.rs  utils.rs
src/drivers/cpu/amd/: mod.rs  pstate.rs
src/drivers/cpu/cpufreq/: mod.rs
src/drivers/cpu/dummy/: mod.rs
src/drivers/cpu/intel/: mod.rs  pstate.rs
src/drivers/dummy/: mod.rs
src/drivers/intel/: mod.rs  pstate.rs
