[package]
name = "powerr-profiles-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = "1.0.200"
serde_with = "3.8.1"
tracing = "0.1.40"
zbus = { version = "4.2.0" }
zvariant = "4.0.3"
